# digisec-public

./: AWS Firecracker MicroVMs to Host Rootless Podman Container.docx  Base copy.docx  README.md
assets/: README.md  kernel.config
docker/: README.md  apk-install.sh  apply.sh  set-rootfs.sh
docs/: kernel.md  production_setup.md
sis-jailer/: .gitignore  .gitlab-ci.yml  README.md
sis-jailer/analysis/: README.md  stats
sis-jailer/ansible/: 01-deploy-logvm.yml  02-destroy-sisvm.yml  03-deploy-sisvm.yml  03a-delay-deploy-sisvm.yml  03b-deploy-sisclient-live.yml  04-deploy-statuspage.yml  21-generate-sisclient.yml  21a-build-browser.yml  21b-build-container.yml  21c-save-sisclient.yml  23-upload-guac.yml  24-build-sisvm.yml  24a-packer-sisvm.yml  24b-cloud-init.yml  README.md  ansible.cfg  hosts-dev.yml  hosts.yml  site.yml
sis-jailer/ansible/tasks/: create-pt-user.yml
sis-jailer/diagrams/: Makefile  arch-ga.tex  arch-pilot.tex
sis-jailer/doc/: setup.md
sis-jailer/firecracker/: README.md
sis-jailer/firecracker/docs/: kernel.md  production_setup.md  rootfs.md  snapshotting.md
sis-jailer/firecracker/src/: build-kernel.sh  build-rorootfs.sh  config.json  firecracker-binary.sh  (+3 more)
sis-jailer/packer/: .gitignore
sis-jailer/sis-spawn/: Cargo.toml  Makefile  README.md
sis-jailer/sis-spawn/src/: main.rs
sis-jailer/status/: Makefile  README.md  index.html.j2
src/: build-kernel.sh  build-rootfs.sh  build-rorootfs.sh  j1.sh  jailer.sh  roj1.sh  rootfs.md  run0.sh  run1.sh
src/docker/: apk-install.sh  apply.sh  roapply.sh  roset-rootfs.sh  set-rootfs.sh
(+47 files in other folders)
